--- a/assets/scss/pages/_entry.scss
+++ b/assets/scss/pages/_entry.scss
@@ -67,7 +67,6 @@
         }
     }
 
-    * + blockquote {
-        margin-top: $spacing-80;
-    }
+    * + blockquote { margin-top: $spacing-80; }
+    blockquote + blockquote { margin-top: $spacing-16; }
 }
